# toy-hisp

./: .clang-format  .gitignore  CMakeLists.txt  CodeGeneration.hs  Cpp.hs  Doxyfile  EvaluateSKI.hs  Hic.hs  HicBuilder.hs  Hisp.hs  Lexer.hs  Main.hs  MakeParsers.hs  Makefile  Parser.hs  PeggyParser.hs  PrintCpp.hs  README  README.md  SConstruct  SKI.hs  Setup.hs  SkiToC.hs  SkiToCpp.hs  SkiToHic.hs  ToCpp.hs  Unbind.hs  Visualisation.hs  draw.sh  hisp.cabal  lambda.cabal  main.hisp  run_one_test.sh  run_tests.sh  uuagc_options
AG/: CodeGeneration.ag  Cpp.ag  EvaluateSKI.ag  Hisp.ag  PrintCpp.ag  SKI.ag  ToCpp.ag  Visualisation.ag
Hisp/: CodeGeneration.hs  Hic.hs  HicBuilder.hs  Hisp.hs  HispType.hs  PeggyParser.hs  SKI.hs  SkiToHic.hs  TypeLike.hs  Unbind.hs
asm_runtime/: bootstrap.s  builtin.s  constructors.s  debug.s  eval.s  main.h  memory.s  mk_app.s
examples/: conditional.hisp  direct_recursive.hisp  function.hisp  function_with_many_args.hisp  global_work_sharing.hisp  higher_order_functions.hisp  just_print.hisp  mutually_recursive.hisp  pretty_operators.hisp  pretty_triangles.hisp  recursive.hisp  simple_print.hisp  subtraction.hisp  sweet_functions.hisp  tail_recursive.hisp  two_calls.hisp  two_funcs.hisp  work_sharing.hisp
runtime/: CMakeLists.txt  SConscript  builtins.cpp  builtins.hpp  configuration.cpp  configuration_read.hpp  configuration_write.hpp  construct.hpp  debug.cpp  debug.hpp  debugger.cpp  debugger.hpp  eval.cpp  eval.hpp  funcs.inc  garbage_collection.cpp  garbage_collection.hpp  macros.hpp  main.cpp  main.hpp  object.cpp  object.hpp  serialisation.cpp  serialisation.hpp  space.cpp  space.hpp  space_iterators.cpp  stack.cpp  stack.hpp  stream_dispenser.cpp  stream_dispenser.hpp  stream_ptr.cpp  stream_ptr.hpp  utility.hpp
runtime/configuration/: configuration.cpp  write.hpp
runtime/debug/: debugger.cpp  debugger.hpp  stream_dispenser.cpp  stream_dispenser.hpp  stream_ptr.cpp  stream_ptr.hpp
runtime/hisp/: builtins.cpp  builtins.hpp  eval.cpp  eval.hpp  object.cpp  object.hpp  utility.hpp
runtime/memory/: garbage_collection.cpp  garbage_collection.hpp  serialisation.cpp  serialisation.hpp  space.cpp  space.hpp  space_iterators.cpp  stack.cpp  stack.hpp
runtime/meta/: apply.hpp  array_gen.hpp  members.hpp  type_index.hpp
runtime/serialisation/: binary_io.cpp  binary_io.hpp  serialisation.cpp  serialisation.hpp  serialised_hic.cpp  serialised_hic.hpp
