name:                  hisp
version:               0.0.1
synopsis:              A very simple language to learn lambda calculus better.
license:               PublicDomain
author:                Anton Golov
stability:             what, where?
build-type:            Simple
cabal-version:         >= 1.8
extra-source-files:    Makefile

executable main
  main-is:             Main.hs
  build-depends:       base, mtl, parsec, lens, transformers, containers,
                       pretty, template-haskell, monadplus, prelude-extras,
                       bound, wl-pprint, free, bytestring, void
  hs-source-dirs:      .
  extensions:          TypeSynonymInstances, FlexibleInstances,
                       MultiParamTypeClasses, StandaloneDeriving,
                       OverlappingInstances, IncoherentInstances,
                       UndecidableInstances, FlexibleContexts,
                       RankNTypes, TemplateHaskell,
                       NoMonomorphismRestriction, ScopedTypeVariables,
                       ExplicitForAll, DeriveFunctor, DeriveFoldable,
                       DeriveTraversable, KindSignatures, GADTs,
                       EmptyDataDecls, TypeFamilies
