-- vim: set textwidth=80:
name:                  hisp
version:               0.0.1
synopsis:              A very simple language to learn lambda calculus better.
license:               PublicDomain
author:                Anton Golov
stability:             hypothetical
build-type:            Simple
cabal-version:         >= 1.8
extra-source-files:    Makefile

executable main
  main-is:             Main.hs
  build-depends:       base, containers, prelude-extras, bound, wl-pprint,
                       bytestring, void, peggy
  hs-source-dirs:      .
  extensions:          FlexibleInstances, StandaloneDeriving, FlexibleContexts,
                       NoMonomorphismRestriction, DeriveFunctor, DeriveFoldable,
                       DeriveTraversable
  ghc-options:         -Wall
